--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -37,67 +37,178 @@ h1 {
   text-shadow: 2px 2px white;
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 48px;
+  margin:32px;
+  transition: text-shadow 3s, font-size 2s, color 3s, margin 1s;
 }
+h1:hover {
+      // text-shadow: 0 8px 15px rgba(115, 32, 173, 0.4);
+      text-shadow: 2px 2px rgb(248, 254, 30);
+      color: #411dfd;
+      color: rgb(65, 29, 253);
+      font-size: 120px;
+      margin:50px;
+}
+
+.audio {
+    width: 30%;
+    transition: width 1s, bow-shadow 1s, width 2s;
+}
+.audio:hover {
+  box-shadow: 0 8px 15px rgba(115, 32, 173, 0.4);
+  cursor:pointer ;
+  width: 60%;
+
+}
+
+.searchArea {
+    margin:30px;
+    // border: 1px solid lightgrey;
+        .search {
+            font-size: 12px;
+            width: 30%;
+            border:none;
+            height: 30px;
+            padding-left:5px;
+        }
+        .search:hover {
+          box-shadow: 0 8px 15px rgba(115, 32, 173, 0.4);
+          transition: 0.5s;
+
+        }
+        .submitBtn {
+          height: 30px;
+          color: lightgrey;
+        }
+        .submitBtn:hover {
+          color:black;
+          box-shadow: 0 8px 15px rgba(115, 32, 173, 0.4);
+          // height: 33px;
+          transition: 0.5s;
+
+        }
+}
+
+form::before {
+  background: rgba(245, 18, 221, 0.92);
+  display: inline-block;
+  content: "";
+  height: 9px;
+  width: 100%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 5px;
+}
+
+
 .musicInput {
   // background-color:rgba(225, 249, 229, 0.69);
-   background-color: rgba(255, 255, 255, 0.52);
+   background-color: rgba(255, 255, 255, 0.28);
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    padding: 30px;
+   margin-top:150px;
+   transition: margin 3s;
    // background-color: white;
-
+}
+.musicInput:hover {
+  margin-top:0px;
+  background-color: rgba(255, 255, 255, 0.52);
 }
 
 .audioInput {
     display: block;
     padding: 5px;
-    // height: 160px;
-    width: 220px;
-    // margin-top: 5px;
-    // margin-bottom: 5px;
+    // height: 105px;
+    width: 180px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: auto;
+    font-weight: 100;
+    background-color:none;
 
-        img {
-            height: 218px;
-            width: 218px;
-        }
+    transition: margin 1s, width 1s, height 1s, background-color 2s, font-size 2s, font-weight 2s ;
 
-
-        .user {
-            color:black;
-            font-size: 14px;
-            text-overflow: ellipsis;
+        .songtitle {
+            color:blue;
+            // font-weight: normal;
+            font-size: 12px;
             white-space: nowrap;
             overflow: hidden;
             padding:0;
             margin: 0px;
+            text-overflow: ellipsis;
+        }
+        .user {
+            color:black;
+            font-size: 14px;
+            white-space: nowrap;
+            overflow: hidden;
+            padding:0;
+            margin: 0px;
+            text-overflow: ellipsis;
         }
 }
-.audioInput:hover {
-    transition: 0.5s;
-    background-color: rgba(0, 0, 0, 0.3);
-    color:white;
-    padding:23px;
-    margin-top:10px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    // box-shadow: 2px 2px grey;
-        img:hover {
-            height:225px;
-            width:auto;
-        }
-}
-.songtitle {
-    color:lightblue;
+.audioInput:hover,  {
+    font-size:15px;
     font-weight: bolder;
-    font-size: 10px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    padding:0;
-    margin: 0px;
+    background-color: rgba(255, 255, 255, 0.52);
+    // background-color: rgba(0, 0, 0, 0.3);
+    // padding:23px;
+    width: 206px;
+    margin: 25px;
+    cursor: pointer;
 }
 
-form {
-    margin:10px;
+.artwork {
+    display: block;
+    width: 145px;
+    transition: width 2s, height 2s, background-color 3s, transform 3s;
 }
+
+.artwork:hover {
+    height:204px;
+    width:204px;
+    // transform: rotate(360deg);
+    // transition-delay: 0.5;
+    // transition-timing-function: ease-in-out;
+    // transition-duration: 1s;
+}
+
+
+
+
+
+// .songtitle:hover {
+//   font-size: 15px;
+//   font-weight: 700;
+//   transition: 0.5;
+// }
+// user:hover {
+//   font-size:12px;
+// }
+
+
+
+//
+// .searchArea::before {
+//   background: black;
+//   display: inline-block;
+//   content: "";
+//   height: 3px;
+//   width: 160px;
+//           // margin-left: 22%;
+//           // margin-right: 36%;
+//           // margin-bottom: 5px;
+// // }
+// .musicInput::before {
+//       background: rgb(242, 254, 20);
+//       display: inline-block;
+//       content: "";
+//       height: 9px;
+//       width: 100%;
+//       /* margin-left: -2%; */
+//       /* margin-right: -17%; */
+//       /* margin-bottom: 16px; */
+//       margin-top: -3%;
+//   }
